sending messages architecture restructured, sending html template